fixing various swagger parameter issues, programmatic creation of profiles now working
